# aoc

./: Cargo.toml
aoc-2019/: Cargo.toml
aoc-2023/: Cargo.toml  Readme.md
aoc-helpers/: Cargo.toml
aoc-helpers/src/: lib.rs
aoc-macros/: Cargo.toml
aoc-macros/tests/: test_basics.rs
offline-access/: download.sh
src/: lib.rs  main.rs
src/day1/: mod.rs
