[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
itertools = "0.12.0"
threadpool = "1.8.1"
aoc-macros = {path="../aoc-macros"}
priority-queue = "1.3.2"
hashbrown = "0.14.3"
